fix(header-flyout): text in button nowrap

--- a/src/components/global/header/headerFlyout.scss
+++ b/src/components/global/header/headerFlyout.scss
@@ -16,6 +16,7 @@
   padding: 16px 12px 16px 8px;
   height: 56px;
   text-decoration: none;
+  white-space: nowrap;
 
   ::slotted(kd-icon),
   ::slotted(svg) {
@@ -86,12 +87,12 @@
   }
 }
 
-slot[name='button'] {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 6px;
-}
+// slot[name='button'] {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   gap: 6px;
+// }
 
 .arrow {
   margin-left: auto;
